# ani-archiver

./: .env.exemple  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  deployment.yaml
.github/workflows/: coverage.yml  deploy.yml
src/: main.rs  regex_parser.rs  utils.rs
src/cache/: mod.rs
src/file/: cache.rs  mod.rs  models.rs  nfo.rs
src/tmdb/: api.rs  mod.rs  models.rs  nfo.rs  scraper.rs
