[package]
name = "ani-archiver"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "native-tls", "socks", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.42", features = ["derive"] }
dotenv = "0.15"
sha2 = "0.10"
regex = "1.11.1"
tempfile = "3.20.0"
lazy_static = "1.5.0"
futures = "0.3"
thiserror = "1.0.40"

[dev-dependencies]
mockito = "0.31"
tokio-test = "0.4"
